--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_main.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_main.xml
@@ -42,4 +42,10 @@
         android:padding="16dp"
         android:background="@android:color/background_light" />
 
+    <Button
+        android:id="@+id/irLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="LOGIN (TEMPORAL)" />
+
 </android.widget.LinearLayout>
