--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/inicio_sesion.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/inicio_sesion.xml
@@ -104,7 +104,7 @@
             app:layout_constraintTop_toBottomOf="@id/login_email_tv" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/enlaceReestablecer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
