--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/editar_perfil.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/editar_perfil.xml
@@ -124,7 +124,8 @@
                 android:padding="8dp"
                 android:paddingBottom="12dp"
                 android:text="Correo Usuario"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:enabled="false"/>
 
             <View
                 android:layout_width="match_parent"
