--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/drawable/boton_cancelar_popup.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/drawable/boton_cancelar_popup.xml
@@ -2,6 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
+    <solid android:color="#FFFFFF"/>
+    <stroke android:width="2dp" android:color="#059669"/>
     <corners android:radius="28dp"/>
-    <solid android:color="#00916E"/>
+
 </shape>
