--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/popup_confirmar_cambiar_contrasenya.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/popup_confirmar_cambiar_contrasenya.xml
@@ -52,7 +52,7 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/boton_cancelar_popup"
             android:text="Cancelar"
-            android:textColor="#FFFFFF"
+            android:textColor="#059669"
             android:fontFamily="@font/roboto_bold"
             android:textSize="15sp"
             android:textAllCaps="false"
