--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
@@ -153,63 +153,225 @@
     <!-- ==========================================================
          PANEL INFERIOR (BOTTOM SHEET) – CONTAMINANTES
          ========================================================== -->
+    <!-- ==========================================================
+      PANEL INFERIOR (BOTTOM SHEET) – CONTAMINANTES
+ ========================================================== -->
     <LinearLayout
         android:id="@+id/bottomSheetContaminantes"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
         android:background="@drawable/bg_bottomsheet"
         android:padding="20dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.45">
 
-        <View
-            android:layout_width="50dp"
-            android:layout_height="5dp"
-            android:layout_gravity="center"
-            android:background="@drawable/bg_handle"
-            android:layout_marginBottom="14dp"/>
-
-        <TextView
-            android:id="@+id/txtTituloContaminantes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Contaminantes"
-            android:textColor="#1F2B38"
-            android:textSize="20sp"
-            android:fontFamily="@font/roboto_bold"
-            android:layout_marginBottom="16dp"/>
-
-        <!-- LISTA DE GASES (solo layout) -->
+        <!-- TÍTULO + X cerrar -->
         <LinearLayout
-            android:id="@+id/listaGases"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="10dp">
 
-            <!-- GAS (REPETIR ESTILO LUEGO CON DINÁMICA) -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:background="@drawable/bg_gasitem"
-                android:gravity="center_vertical"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:layout_marginBottom="10dp">
+            <TextView
+                android:id="@+id/txtTituloContaminantes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Contaminantes"
+                android:textSize="20sp"
+                android:textColor="#1F2B38"
+                android:fontFamily="@font/roboto_bold"/>
 
-                <TextView
-                    android:id="@+id/txtGasEjemplo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="CO"
-                    android:textSize="18sp"
-                    android:textColor="#1F2B38"
-                    android:fontFamily="@font/roboto"/>
-            </LinearLayout>
-
+            <ImageView
+                android:id="@+id/btnCerrarContaminantes"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:padding="6dp"
+                android:src="@drawable/ic_close"/>
         </LinearLayout>
-    </LinearLayout>
 
+        <!-- BOTÓN INFO -->
+        <LinearLayout
+            android:id="@+id/btnInfoContaminantes"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="8dp"
+            android:layout_marginBottom="10dp">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_info"
+                android:layout_marginEnd="10dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Información sobre contaminantes"
+                android:textSize="15sp"
+                android:textColor="#1F2B38"
+                android:fontFamily="@font/roboto"/>
+        </LinearLayout>
+
+        <!-- LISTA SCROLLEABLE -->
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:fillViewport="true"
+            android:paddingBottom="40dp"
+            android:clipToPadding="false">
+
+
+        <LinearLayout
+                android:id="@+id/listaGases"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <!-- TODOS (seleccionado por defecto) -->
+                <LinearLayout
+                    android:id="@+id/itemTodos"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:background="@drawable/bg_gasitem_selected"
+                    android:gravity="center_vertical"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:layout_marginBottom="10dp">
+
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:src="@drawable/cloud"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Todos"
+                        android:textSize="17sp"
+                        android:textColor="#059669"
+                        android:fontFamily="@font/roboto"
+                        android:layout_marginStart="12dp"/>
+                </LinearLayout>
+
+                <!-- O3 -->
+                <LinearLayout
+                    android:id="@+id/itemO3"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:background="@drawable/bg_gasitem"
+                    android:gravity="center_vertical"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:layout_marginBottom="10dp">
+
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:src="@drawable/wind"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="O₃"
+                        android:textSize="17sp"
+                        android:textColor="#1F2B38"
+                        android:fontFamily="@font/roboto"
+                        android:layout_marginStart="12dp"/>
+                </LinearLayout>
+
+                <!-- NO2 -->
+                <LinearLayout
+                    android:id="@+id/itemNO2"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:background="@drawable/bg_gasitem"
+                    android:gravity="center_vertical"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:layout_marginBottom="10dp">
+
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:src="@drawable/cloud"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="NO₂"
+                        android:textSize="17sp"
+                        android:textColor="#1F2B38"
+                        android:fontFamily="@font/roboto"
+                        android:layout_marginStart="12dp"/>
+                </LinearLayout>
+
+                <!-- CO -->
+                <LinearLayout
+                    android:id="@+id/itemCO"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:background="@drawable/bg_gasitem"
+                    android:gravity="center_vertical"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:layout_marginBottom="10dp">
+
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:src="@drawable/cloudsnow"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="CO"
+                        android:textSize="17sp"
+                        android:textColor="#1F2B38"
+                        android:fontFamily="@font/roboto"
+                        android:layout_marginStart="12dp"/>
+                </LinearLayout>
+
+                <!-- SO2 -->
+                <LinearLayout
+                    android:id="@+id/itemSO2"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:background="@drawable/bg_gasitem"
+                    android:gravity="center_vertical"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:layout_marginBottom="10dp">
+
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:src="@drawable/clouddrizzle"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="SO₂"
+                        android:textSize="17sp"
+                        android:textColor="#1F2B38"
+                        android:fontFamily="@font/roboto"
+                        android:layout_marginStart="12dp"/>
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
+
+    </LinearLayout>
+    <!-- =========================================================
+     AQUÍ ACABA PANEL INFERIOR (BOTTOM SHEET) – CONTAMINANTES
+    ========================================================== -->
 
     <!-- ==========================================================
          BOTTOM NAV
