--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
@@ -505,10 +505,41 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20%"
+                        android:text="10%"
                         android:textSize="15sp"
                         android:textColor="#64748B"/>
                 </LinearLayout>
+
+            <!-- INSALUBRE -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="8dp">
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:background="#FB923C"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="4dp"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Insalubre"
+                    android:textColor="#1F2B38"
+                    android:textSize="15sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10%"
+                    android:textSize="15sp"
+                    android:textColor="#64748B"/>
+            </LinearLayout>
 
                 <!-- MALA -->
                 <LinearLayout
@@ -551,7 +582,7 @@
             android:background="#ECFDF5"
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="#D1FAE5">
 
             <TextView
