--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/user_page.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/user_page.xml
@@ -87,6 +87,7 @@
                     android:layout_marginBottom="16dp"
                     android:fontFamily="@font/roboto"
                     android:text="Para comenzar a ver datos de calidad del aire y activar todas las funciones, vincula tu sensor."
+                    android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
 
