--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/drawable/ic_stop.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/drawable/ic_stop.xml
@@ -1,9 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="16dp"
-    android:height="16dp"
-    android:viewportWidth="16"
-    android:viewportHeight="16">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
   <path
-      android:pathData="M2.5,2.5H13.5V13.5H2.5V2.5Z"
-      android:fillColor="#B23D3D"/>
+      android:pathData="M6,6h12v12H6z"
+      android:fillColor="#FFFFFF"/>
 </vector>
