--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/values/styles.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/values/styles.xml
@@ -15,6 +15,21 @@
         <item name="android:paddingRight">24dp</item>
     </style>
 
+    <style name="BotonSecundarioOutlined" parent="Widget.MaterialComponents.Button">
+        <item name="android:background">@drawable/bg_boton_outlined</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:backgroundTint">@null</item>
+
+        <item name="android:textColor">@color/verde_principal</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:gravity">center</item>
+
+        <item name="android:minHeight">48dp</item>
+        <item name="android:paddingLeft">24dp</item>
+        <item name="android:paddingRight">24dp</item>
+    </style>
+
     <!-- Estilo global para los campos de texto -->
     <style name="CampoTextoLinea">
         <!-- Fondo: SOLO la línea -->
