--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_incidencias.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_incidencias.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
@@ -31,15 +32,49 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+
     <!-- Lista de incidencias -->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabIncidencias"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtTitle"
+        app:tabGravity="fill"
+        app:tabIndicatorFullWidth="true"
+        app:tabMode="fixed"
+        app:tabPaddingBottom="12dp"
+        app:tabPaddingEnd="0dp"
+        app:tabPaddingStart="0dp"
+        app:tabPaddingTop="12dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvIncidencias"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="16dp"
         android:clipToPadding="false"
-        app:layout_constraintTop_toBottomOf="@id/btnBack"
+        android:padding="16dp"
         app:layout_constraintBottom_toTopOf="@id/btnNuevaIncidencia"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabIncidencias" />
+
+    <!-- Texto cuando no hay incidencias -->
+    <TextView
+        android:id="@+id/txtSinIncidencias"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No tienes incidencias"
+        android:textSize="16sp"
+        android:textColor="#999999"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/rvIncidencias"
+        app:layout_constraintBottom_toBottomOf="@id/rvIncidencias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
