--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/item_incidencia.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/item_incidencia.xml
@@ -65,6 +65,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
+        <!-- Estado de la incidencia -->
+        <TextView
+            android:id="@+id/txtEstado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:text="Estado"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:textColor="@color/verde_principal"
+            app:layout_constraintTop_toBottomOf="@id/txtDescripcion"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
